--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -128,7 +128,7 @@
     .td-block {
       width: 40px;
       padding: 2px 0;
-      margin: 0 auto;
+      margin: 4px auto;
 
       @include v.pad-width {
         margin:4px;
