--- a/css/global.css
+++ b/css/global.css
@@ -521,7 +521,6 @@ nav .sidebar .menu .dropdown-menu li:nth-of-type(even) {
 }
 nav .sidebar .menu .dropdown-menu li a {
   color: #fff;
-  font-size: 0.9rem;
 }
 nav .sidebar .menu > li {
   width: 16%;
@@ -981,7 +980,7 @@ html.no-scroll {
 @media all and (min-width: 992px) {
   body,
 html {
-    font-size: 16px;
+    font-size: 16.5px;
   }
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
@@ -1351,167 +1350,168 @@ input:-internal-autofill-selected {
 }
 
 .row-1 {
-  -ms-flex-preferred-size: 10%;
-      flex-basis: 10%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 10%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-1 {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
+    width: 50%;
   }
 }
 @media all and (max-width: 768px) {
   .row-1 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-2 {
-  -ms-flex-preferred-size: 20%;
-      flex-basis: 20%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 20%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-2 {
-    -ms-flex-preferred-size: 33.33%;
-        flex-basis: 33.33%;
+    width: 33.33%;
   }
 }
 @media all and (max-width: 768px) {
   .row-2 {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
+    width: 50%;
   }
 }
 @media all and (max-width: 320px) {
   .row-2 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-3 {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 30%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-3 {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
+    width: 50%;
   }
 }
 @media all and (max-width: 768px) {
   .row-3 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-3-1 {
-  -ms-flex-preferred-size: 33.33%;
-      flex-basis: 33.33%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 33.33%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-3-1 {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
+    width: 50%;
   }
 }
 @media all and (max-width: 768px) {
   .row-3-1 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-4 {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 40%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-4 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 @media all and (max-width: 768px) {
   .row-4 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-7 {
-  -ms-flex-preferred-size: 70%;
-      flex-basis: 70%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 70%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-7 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 @media all and (max-width: 768px) {
   .row-7 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-6 {
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 60%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-6 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 @media all and (max-width: 768px) {
   .row-6 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-5 {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 50%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-5 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 @media all and (max-width: 768px) {
   .row-5 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-8 {
-  -ms-flex-preferred-size: 80%;
-      flex-basis: 80%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 80%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .row-8 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 @media all and (max-width: 768px) {
   .row-8 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    width: 100%;
   }
 }
 
 .row-9 {
-  -ms-flex-preferred-size: 90%;
-      flex-basis: 90%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 90%;
 }
 
 .section {
@@ -1542,7 +1542,7 @@ input:-internal-autofill-selected {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin: 40px 0;
+  margin: 30px 0;
   width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -1563,7 +1563,7 @@ input:-internal-autofill-selected {
   cursor: pointer;
   border: 1px solid #FCC900;
   color: #FCC900;
-  padding: 10px 5px;
+  padding: 10px;
   text-align: center;
   margin-right: 20px;
   width: 12em;
